2001-10-20  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (handle_load_dll): Avoid strlwr'ing loaded DLLs or cygwin
	may not be able to read them in certain situations.

2001-10-18  Andrew Cagney  <ac131313@redhat.com>

	* README: Mention problems with HP/UX.

2001-10-16  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Improve logic for avoiding
	load of already loaded DLL.
	(register_loaded_dll): Convert loaded DLL name to "posix" format or it
	will confuse subsequent opening of the filename due to dos paths.
	(dll_symbol_command): Pass from_tty parameter to safe_symbol_file_add.

202001-10-15  Jim Ingham  <jingham@inghji.apple.com>

        * valarith.c (value_sub): Don't pass a raw type to
        value_from_pointer, it has to go through check_typedef first.

01-10-15  Kevin Buettner  <kevinb@redhat.com>

	* dbxread.c (process_one_symbol): Don't use error result from
	find_stab_function_addr().
	* partial-stab.h (case 'F'): Likewise.

	* partial-stab.h (case 'f'): Make SOFUN_ADDRESS_MAYBE_MISSING
	code match that used for case 'F'.  This fixes the divergence
	that was introduced by my 1999-09-14 changes to partial-stab.h.

2001-10-13  Andrew Cagney  <ac131313@redhat.com>

	S/390 31 & 64 bit target and GNU/Linux native support.
	Contributed by D.J. Barrow <djbarrow@de.ibm.com> of IBM.
	* s390-nat.c, s390-tdep.c: New file.
	* config/s390/nm-linux.h, config/s390/s390.mh: New file.
	* config/s390/s390.mt, config/s390/s390x.mt: New file.
	* config/s390/tm-linux.h, config/s390/tm-s390.h: New file.
	* config/s390/xm-linux.h: New file.
	* NEWS: Update.
	* MAINTAINERS: Update.

2001-10-13  Andrew Cagney  <ac131313@redhat.com>

	From 2001-07-09 D.J. Barrow <djbarrow@de.ibm.com>:
        * gdbarch.sh: Fixed CALL_DUMMY_BREAKPOINT_OFFSET to check
	CALL_DUMMY_BREAKPOINT_OFFSET_P.
	* gdbarch.c: Regenerate.
	
2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Properly initialize linked